--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@clerk/nextjs": "^4.13.0",
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
-		"@prisma/client": "^4.11.0",
+		"@prisma/client": "^4.12.0",
 		"@tanstack/react-query": "^4.28.0",
 		"@trpc/client": "^10.18.0",
 		"@trpc/next": "^10.18.0",
@@ -25,6 +25,7 @@
 		"next": "^13.2.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-icons": "^4.8.0",
 		"superjson": "1.12.2",
 		"zod": "^3.21.4"
 	},
