--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
 		"superjson": "1.12.2",
+		"uuid": "^9.0.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
@@ -35,6 +36,7 @@
 		"@types/node": "^18.15.5",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"eslint": "^8.36.0",
