--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@trpc/next": "^10.18.0",
 		"@trpc/react-query": "^10.18.0",
 		"@trpc/server": "^10.18.0",
+		"dayjs": "^1.11.7",
 		"framer-motion": "^10.10.0",
 		"next": "^13.2.4",
 		"react": "18.2.0",
