--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
 		"next": "^13.2.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-dropzone": "^14.2.3",
 		"react-icons": "^4.8.0",
 		"superjson": "1.12.2",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.21.3",
+		"@types/fslightbox-react": "^1.7.1",
 		"@types/node": "^18.15.5",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
