--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-dropzone": "^14.2.3",
 		"react-icons": "^4.8.0",
 		"superjson": "1.12.2",
+		"swiper": "^9.2.4",
 		"uuid": "^9.0.0",
 		"zod": "^3.21.4"
 	},
