--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-dom": "18.2.0",
 		"react-dropzone": "^14.2.3",
 		"react-icons": "^4.8.0",
+		"react-type-animation": "^3.0.1",
 		"superjson": "1.12.2",
 		"swiper": "^9.2.4",
 		"uuid": "^9.0.0",
