--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"postinstall": "prisma generate",
 		"lint": "next lint",
 		"start": "next start",
-		"prettier": "npx prettier --config .prettierrc --ignore-path .gitignore --write \"**/*.{js,jsx,json,md,ts,tsx}\""
+		"prettier": "npx prettier --config .prettierrc --ignore-path .gitignore --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"@chakra-ui/react": "^2.5.5",
@@ -47,6 +48,8 @@
 		"@typescript-eslint/parser": "^5.56.0",
 		"eslint": "^8.36.0",
 		"eslint-config-next": "^13.2.4",
+		"husky": "^8.0.0",
+		"lint-staged": "^13.2.2",
 		"prettier-plugin-organize-imports": "^3.2.2",
 		"prisma": "^4.13.0",
 		"typescript": "^5.0.2"
