Change yml actions

--- a/.github/workflow/prettier.yml
+++ b/.github/workflow/prettier.yml
@@ -3,7 +3,8 @@ name: Prettier
 on: push
 
 jobs:
-    prettier:
+    build:
+		name: Prettier
         runs-on: ubuntu-latest
         steps:
             - name: Checkout code
