--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@trpc/next": "^10.18.0",
 		"@trpc/react-query": "^10.18.0",
 		"@trpc/server": "^10.18.0",
+		"@upstash/ratelimit": "^0.4.3",
+		"@upstash/redis": "^1.20.6",
 		"dayjs": "^1.11.7",
 		"framer-motion": "^10.10.0",
 		"next": "^13.2.4",
