--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@upstash/redis": "^1.20.6",
 		"dayjs": "^1.11.7",
 		"framer-motion": "^10.10.0",
+		"lodash": "^4.17.21",
 		"next": "^13.2.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -33,6 +34,7 @@
 		"react-icons": "^4.8.0",
 		"react-imask": "^6.6.1",
 		"react-type-animation": "^3.0.1",
+		"recharts": "^2.6.2",
 		"superjson": "1.12.2",
 		"swiper": "^9.2.4",
 		"uuid": "^9.0.0",
