Add Date range Picker

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
 		"@trpc/server": "^10.18.0",
 		"@upstash/ratelimit": "^0.4.3",
 		"@upstash/redis": "^1.20.6",
+		"chakra-dayzed-datepicker": "^0.2.8",
+		"date-fns": "^2.30.0",
 		"dayjs": "^1.11.7",
+		"dayzed": "^3.2.3",
 		"framer-motion": "^10.10.0",
 		"lodash": "^4.17.21",
 		"next": "^13.2.4",
