--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@clerk/nextjs": "^4.13.0",
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
+		"@pbe/react-yandex-maps": "^1.2.4",
 		"@prisma/client": "^4.13.0",
 		"@supabase/supabase-js": "^2.15.0",
 		"@tanstack/react-query": "^4.28.0",
