--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"lodash": "^4.17.21",
 		"next": "^13.2.4",
 		"react": "18.2.0",
+		"react-dadata": "^2.23.1",
 		"react-dom": "18.2.0",
 		"react-dropzone": "^14.2.3",
 		"react-icons": "^4.8.0",
