--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
 		"**/*.ts",
 		"**/*.tsx",
 		"**/*.cjs",
-		"**/*.mjs"
+		"**/*.mjs",
+		"src/components/YandexMaps/Maps.tsx"
 	],
 	"exclude": ["node_modules"]
 }
