--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: Prettier
-on: [push]
+on: [push, pull_request]
+
+env:
+	DATABASE_URL: "https://fake.com"
 
 jobs:
     build:
@@ -11,3 +14,13 @@ jobs:
               run: npm install
             - name: Run Prettier
               run: npm run prettier
+			- name: Checkout
+			uses: actions/checkout@v2
+			- name: Install Dependencies
+				run: npm install
+			- name: Typecheck
+				run: npm run typecheck
+			- name: Lint
+				run: npm run lint
+			- name: Print Environment Variable
+				run: echo $MY_ENV_VAR
