--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"postinstall": "prisma generate",
 		"lint": "next lint",
 		"start": "next start",
-		"prettier": "prettier --config .prettierrc --ignore-path .gitignore --write \"**/*.{js,jsx,json,md,ts,tsx}\""
+		"prettier": "prettier --config .prettierrc --ignore-path .gitignore --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
+		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@chakra-ui/react": "^2.5.5",
