--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"framer-motion": "^10.12.16",
 		"lodash": "^4.17.21",
 		"next": "^13.2.4",
+		"pusher": "^5.1.3",
+		"pusher-js": "^8.1.0",
 		"react": "18.2.0",
 		"react-dadata": "^2.23.1",
 		"react-dom": "18.2.0",
