Change structure of folder, moved not reusable component to UI folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
 		"**/*.tsx",
 		"**/*.cjs",
 		"**/*.mjs",
-		"src/components/YandexMaps/Maps.tsx"
+		"src/UI/YandexMaps/Maps.tsx"
 	],
 	"exclude": ["node_modules"]
 }
