--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 		"precommit": "npm run prettier && npm run typecheck && git add . && git commit"
 	},
 	"dependencies": {
+		"@chakra-ui/next-js": "^2.1.4",
 		"@chakra-ui/react": "^2.7.0",
 		"@clerk/nextjs": "^4.19.1",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@pbe/react-yandex-maps": "^1.2.4",
+		"@plaiceholder/next": "^3.0.0",
 		"@prisma/client": "^4.13.0",
 		"@supabase/supabase-js": "^2.15.0",
 		"@tanstack/react-query": "^4.28.0",
@@ -34,6 +36,7 @@
 		"framer-motion": "^10.12.16",
 		"lodash": "^4.17.21",
 		"next": "^13.2.4",
+		"plaiceholder": "^3.0.0",
 		"pusher": "^5.1.3",
 		"pusher-js": "^8.1.0",
 		"react": "18.2.0",
