--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,12 @@ on: [push, pull_request]
 
 env:
     DATABASE_URL: "https://fake.com"
-    PUSHER_APP_ID: "23",
-    PUSHER_APP_SECRET: "999",
-    NEXT_PUBLIC_PUSHER_APP_KEY: "35",
-    NEXT_PUBLIC_PUSHER_CLUSTER: "36"
+	NEXT_PUBLIC_PUSHER_CLUSTER: "321312"
+	NEXT_PUBLIC_PUSHER_APP_KEY: "3213123"
+	PUSHER_APP_ID: "3123"
+	PUSHER_APP_SECRET: "3213"
+	NEXT_PUBLIC_SUPABASE_URL: "123213"
+	NEXT_PUBLIC_VISITORS_LINKS: "1231231"
 
 jobs:
     build:
@@ -22,5 +24,3 @@ jobs:
               run: npm run typecheck
             - name: Lint
               run: npm run lint
-            - name: Print Environment Variable
-              run: echo $MY_ENV_VAR
