--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@trpc/next": "^10.18.0",
 		"@trpc/react-query": "^10.18.0",
 		"@trpc/server": "^10.18.0",
+		"@uploadthing/react": "^5.0.0",
 		"@upstash/ratelimit": "^0.4.3",
 		"@upstash/redis": "^1.21.0",
 		"chakra-dayzed-datepicker": "^0.2.8",
@@ -49,6 +50,7 @@
 		"recharts": "^2.6.2",
 		"superjson": "1.12.2",
 		"swiper": "^9.2.4",
+		"uploadthing": "^5.0.0",
 		"uuid": "^9.0.0",
 		"zod": "^3.21.4"
 	},
