--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,16 @@ name: Prettier
 on: [push, pull_request]
 
 env:
-  DATABASE_URL: "https://fake.com"
-  NEXT_PUBLIC_PUSHER_CLUSTER: "321312"
-  NEXT_PUBLIC_PUSHER_APP_KEY: "3213123"
-  PUSHER_APP_ID: "3123"
-  PUSHER_APP_SECRET: "3213"
-  NEXT_PUBLIC_UPLOADTHING_URL: "123213"
-    NEXT_PUBLIC_VISITORS_LINKS: "1231231"
+  DATABASE_URL: "some fake string",
+	NODE_ENV: "some fake string",
+	PUSHER_APP_ID: "some fake string",
+	UPLOADTHING_APP_ID: "some fake string",
+	UPLOADTHING_SECRET: "some fake string",
+	NEXT_PUBLIC_PUSHER_CLUSTER: "some fake string",
+	NEXT_PUBLIC_PUSHER_APP_KEY: "some fake string",
+	PUSHER_APP_SECRET: "some fake string",
+	NEXT_PUBLIC_VISITORS_LINKS: "some fake string",
+	NEXT_PUBLIC_UPLOADTHING_URL: "some fake string"
 
 jobs:
   build:
