--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"date-fns": "^2.30.0",
 		"dayjs": "^1.11.7",
 		"dayzed": "^3.2.3",
+		"embla-carousel-react": "^8.0.0-rc14",
 		"framer-motion": "^10.12.16",
 		"lodash": "^4.17.21",
 		"next": "^13.2.4",
