--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@uploadthing/react": "^5.0.0",
 		"@upstash/ratelimit": "^0.4.3",
 		"@upstash/redis": "^1.21.0",
+		"axios": "^1.6.2",
 		"chakra-dayzed-datepicker": "^0.2.8",
 		"date-fns": "^2.30.0",
 		"dayjs": "^1.11.7",
@@ -52,7 +53,8 @@
 		"superjson": "1.12.2",
 		"uploadthing": "^5.0.0",
 		"uuid": "^9.0.0",
-		"zod": "^3.21.4"
+		"zod": "^3.21.4",
+		"zustand": "^4.4.6"
 	},
 	"devDependencies": {
 		"@chakra-ui/cli": "^2.4.1",
