--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 		"date-fns": "^2.30.0",
 		"dayjs": "^1.11.7",
 		"dayzed": "^3.2.3",
+		"embla-carousel-class-names": "^8.0.0-rc14",
 		"embla-carousel-react": "^8.0.0-rc14",
+		"embla-carousel-wheel-gestures": "^8.0.0-rc05",
 		"framer-motion": "^10.12.16",
 		"lodash": "^4.17.21",
 		"next": "^13.2.4",
@@ -48,6 +50,7 @@
 		"react-dropzone": "^14.2.3",
 		"react-icons": "^4.9.0",
 		"react-imask": "^6.6.1",
+		"react-infinite-scroll-component": "^6.1.0",
 		"react-type-animation": "^3.0.1",
 		"recharts": "^2.6.2",
 		"superjson": "1.12.2",
