--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@trpc/next": "^10.18.0",
 		"@trpc/react-query": "^10.18.0",
 		"@trpc/server": "^10.18.0",
+		"@uidotdev/usehooks": "^2.4.1",
 		"@uploadthing/react": "^5.0.0",
 		"@upstash/ratelimit": "^0.4.3",
 		"@upstash/redis": "^1.21.0",
