--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,17 @@ name: Prettier
 
 on:
   push:
-  pull_requiest:
+  pull_request:
 
-env:
-    DATABASE_URL: "https://fake.com"
-	NODE_ENV: "development"
-	UPLOADTHING_APP_ID: "some fake string"
-	UPLOADTHING_SECRET: "some fake string"
-	NEXT_PUBLIC_VISITORS_LINKS: "some fake string"
-	NEXT_PUBLIC_UPLOADTHING_URL: "some fake string"
+    env:
+      DATABASE_URL: "https://fake.com"
+    NODE_ENV: "development"
+    UPLOADTHING_APP_ID: "some fake string"
+    UPLOADTHING_SECRET: "some fake string"
+    NEXT_PUBLIC_VISITORS_LINKS: "some fake string"
+    NEXT_PUBLIC_UPLOADTHING_URL: "some fake string"
     CDEK_ID: "123"
-	CDEK_SECRET: "321"
+    CDEK_SECRET: "321"
 
 jobs:
   build:
